2021-03-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/tsd.c (MagickTsdKeyDelete): Fix memory leak of key values
        array at exit when use of pthread or WIN32 TSD APIs is disabled.

2021-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLStartElement): Consistently verify that
        attributes are non-NULL before calling TranslateText().  Fixes
        oss-fuzz 31779 "graphicsmagick:coder_MSL_fuzzer: ASSERT: image !=
        (Image *) NULL".

        * README.txt: Add mention of libdeflate library, since it is an
        optional dependency of the next libtiff release, and might be
        required to link if libtiff itself depends on it.

        * configure.ac (MAGICK_DEP_LIBS): Liblzma is a libtiff dependency.
        GraphicsMagick does not directly use liblzma.  Do not include
        liblzma as direct dependency for the modules build.

2021-03-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (ProcessStyleClassDefs): Fix non-terminal execution
        while traversing "active" list based on a patch by Gregory J
        Wolfe.  Addresses oss-fuzz 31663
        "graphicsmagick:coder_SVGZ_fuzzer: Timeout in coder_SVGZ_fuzzer".

2021-03-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (ProcessStyleClassDefs): Corrected fix for oss-fuzz
        31234 "graphicsmagick:coder_SVG_fuzzer: Direct-leak in
        MagickMalloc" based on a patch by Gregory J Wolfe.

2021-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: Add tests for Jasper jp2_decode(), jpc_decode(),
        and pgx_decode().

        * coders/jp2.c (ReadJP2Image): Call jp2_decode(), jpc_decode(), or
        pgx_decode(), directly. Using jas_image_decode() makes us subject
        to Jasper's own format determination, which may include file
        formats we don't want to support via Jasper.
